Cambios realizados inicio de sesion y funcion registrarse

--- a/Views/Usuarios/Login.cshtml
+++ b/Views/Usuarios/Login.cshtml
@@ -16,6 +16,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary w-100">Entrar</button>
+    <a asp-controller="Usuarios" asp-action="Registrar" class="btn btn-outline-primary mt-2 w-100">Registrarse</a>
 </form>
 
 @section Scripts {
