Falta scripting y mejoras como que se regresa y se vuelve sin cerrarse sesion

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Inicio";
+    ViewData["Title"] = "Inicio - ";
 }
 <h2 class="text-center fs-1 text-info">BIENVENIDOS A AULAGESTIÓN</h2>
 <p class="text-center fs-4 text-info">Seleccione la opción deseada</p>
