arreglar los circulos uno abajo uno arriba, en el menu de inicio, hacer scripting y seguir modificando visualmente

--- a/Views/Colaboradores/Index.cshtml
+++ b/Views/Colaboradores/Index.cshtml
@@ -53,10 +53,10 @@ Se crea una lista HTML no ordenada <ul> para mostrar los usuarios.
         }
 
         .cuadro-personalizado {
-            background-color: #e0f2f1; /* fondo verde claro suave */
+            background-color: white; /* fondo verde claro suave */
             border: 2px solid darkgreen; /* borde verde oscuro */
             border-radius: 15px; /* bordes redondeados */
-            padding: 18px; /* espacio interno */
+            padding: 20px; /* espacio interno */
             color: darkgreen; /* texto verde oscuro */
             font-family: 'Georgia', serif; /* fuente */
         }
@@ -65,7 +65,7 @@ Se crea una lista HTML no ordenada <ul> para mostrar los usuarios.
 </head>
 <body>
     <div class="centro-titulo fuente-titulos">
-        <h2> COLABORADORES </h2>
+        <h2> Colaboradores </h2>
     </div>
     <div>
         <div class="container">
