--- a/Views/Usuarios/Login.cshtml
+++ b/Views/Usuarios/Login.cshtml
@@ -15,7 +15,6 @@
             border: 2px solid darkgreen; /* borde verde oscuro */
             border-radius: 15px; /* bordes redondeados */
             padding: 18px; /* espacio interno */
-            color: darkgreen; /* texto verde oscuro */
             font-family: 'Georgia', serif; /* fuente */
         }
 
@@ -71,8 +70,8 @@
                 <div style="height: 2px; background-color: darkgreen; margin: 15px 0;"></div>
 
                 <div class="mb-1">
-                    <button type="submit" class="btn w-100" style="background-color: deepskyblue; color: white">Ingresar</button>
-                    <a asp-controller="Usuarios" asp-action="Registrar" class="btn  mt-2 w-100" style="background-color: lawngreen; color: white">Registrarse</a>
+                    <button type="submit" class="btn w-100" style="background-color: deepskyblue;border: 2px solid dodgerblue; color: white">Ingresar</button>
+                    <a asp-controller="Usuarios" asp-action="Registrar" class="btn  mt-2 w-100" style="background-color: lawngreen;border: 2px solid limegreen; color: white">Registrarse</a>
                 </div>
             </form>
         </div>
