--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 
         .izq-pantalla {
             position: fixed;
-            top: 2%;
+            top: 13%;
             left: 2%;
             transform: translateX(-2%);
             display: flex;
@@ -33,68 +33,36 @@
             color: darkgreen; /* Color */
         }
 
-        /* Clase base común para todos los círculos */
-        .circulo {
-            border-radius: 50%;
-            width: 225px;
-            height: 225px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-weight: bold;
-            font-size: 2rem;
-            font-family: 'Georgia', serif;
-            color: darkgreen;
-            text-decoration: none;
-            border: 2px solid darkgreen;
+        .posicion-botones {
             position: fixed;
-        }
-
-        /* Fondos */
-        .circulo-blanco {
-            background-color: white;
-        }
-
-        .circulo-imagen {
-            background-size: cover;
-            background-position: center;
-        }
-
-        /* Posiciones */
-        .top-row {
-            top: 10%;
-        }
-
-        .bottom-row {
-            bottom: 10%;
-        }
-
-        /* Izquierda a derecha columnas */
-        .col-1 {
-            left: 100px;
-        }
-
-        .col-2 {
-            left: 420px;
-        }
-
-        .col-3 {
-            left: 740px;
-        }
-
-        .col-4 {
-            left: 1060px;
-        }
-
-        .posicion-pantalla {
-            position: fixed;
-            top: 50%; /* 50% desde arriba */
-            transform: translate(0%, -50%); /* Ajusta para centrar exactamente */
+            top: 60%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             display: flex; /* Para usar flexbox */
+            flex-direction: column;
             justify-content: center; /* Centrar horizontal */
             align-items: center; /* Centrar vertical */
-            width: 1000px; /* Ancho fijo o el que necesites */
-            height: 400px; /* Alto fijo o el que necesites */
+            width: auto; /* Ancho fijo o el que necesites */
+            height: auto; /* Alto fijo o el que necesites */
+        }
+
+        .boton-verde{
+            width: 500px;
+            background-color: lawngreen;
+            border: 2px solid darkgreen;
+            color: white;
+        }
+        .boton-azul{
+            width: 500px;
+            background-color: deepskyblue;
+            border: 2px solid darkgreen;
+            color: white;
+        }
+
+        .fuente {
+            font-family: 'Georgia', serif; /* Tipo de letra */
+            font-size: 2rem; /* Tamaño de letra */
+            font-weight: bold; /* Grosor */
         }
     </style>
 </head>
@@ -107,22 +75,11 @@
             </span>
         </div>
     }
-    <div class="centro-pantalla">
-    </div>
-    <div>
-        <!-- Fila superior -->
-        <a class="circulo circulo-imagen top-row col-1" style="background-image: url('/Images/images.jpeg');" asp-controller="Tareas" asp-action="Index"></a>
-        <a class="btn circulo circulo-blanco top-row col-2" asp-controller="Tutorias" asp-action="Index">Tutorías</a>
-        <a class="circulo circulo-imagen top-row col-3" style="background-image: url('/Images/materiales.jpeg');"></a>
-        <a class="btn circulo circulo-blanco top-row col-4" asp-controller="Clases" asp-action="Index">Clases</a>
-    </div>
-
-    <div>
-        <!-- Fila inferior -->
-        <a class="btn circulo circulo-blanco bottom-row col-1" asp-controller="Tareas" asp-action="Index">Tareas</a>
-        <a class="circulo circulo-imagen bottom-row col-2" style="background-image: url('/Images/tutoria.jpeg');"></a>
-        <a class="btn circulo circulo-blanco bottom-row col-3" asp-controller="Materiales" asp-action="Index">Materiales</a>
-        <a class="circulo circulo-imagen bottom-row col-4" style="background-image: url('/Images/clases.jpeg');"></a>
+    <div class="posicion-botones">
+        <a class="btn boton-verde fuente mb-5" asp-controller="Clases" asp-action="Index">Gestionar clases</a>
+        <a class="btn boton-azul fuente mb-5" asp-controller="Tareas" asp-action="Index">Gestionar tareas</a>
+        <a class="btn boton-verde fuente mb-5" asp-controller="Materiales" asp-action="Index">Gestionar materiales</a>
+        <a class="btn boton-azul fuente mb-5" asp-controller="Tutorias" asp-action="Index">Gestionar tutorías</a>
     </div>
 </body>
 </html>
