--- a/Views/Shared/_Encabezado.cshtml
+++ b/Views/Shared/_Encabezado.cshtml
@@ -12,7 +12,7 @@
             margin: 0;
         }
 
-        .izq-fondo {
+        .der-fondo {
             font-family: 'Georgia', serif; /* Tipo de letra */
             font-size: 0.80rem; /* Tamaño de letra */
             font-weight: bold; /* Grosor */
@@ -20,8 +20,8 @@
             border: 2px solid darkred;
             color: white; /* Color */
             position: fixed;
-            bottom: 2%;
-            left: 1%;
+            top: 2%;
+            right: 1%;
             transform: translateX(-1%);
             display: flex;
             justify-content: center;
@@ -40,8 +40,13 @@
 <body>
     @if (!string.IsNullOrEmpty(nombre))
     {
+        <header style="background-color: white; border-bottom: 2px solid darkgreen; padding: 0 20px; height: 60px; display: flex; align-items: center;">
+            <div style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
+                <h1 style="font-size: 2rem; font-family: 'Georgia', serif; color: darkgreen; font-weight: bold; margin: 0 auto;">AulaGestión</h1>
+            </div>
+        </header>
         <div>
-            <a asp-controller="Usuarios" asp-action="Logout" class="btn izq-fondo">Cerrar sesión</a>
+            <a asp-controller="Usuarios" asp-action="Logout" class="btn der-fondo">Cerrar sesión</a>
         </div>
     }
 </body>
